Unicorns Make Us All Happy :carousel_horse:
**Why:**

* :carousel_horse: :gun: :carousel_horse: :gun: :carousel_horse: :gun: UNICORNS ASSEMBLE!

--- a/unicorn_command/index.html
+++ b/unicorn_command/index.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Missile Command</title>
+    <title>Unicorn Command</title>
     <link rel="stylesheet" href="assets/stylesheets/style.css">
     <link rel="icon shortcut" href="assets/images/favicon.ico">
   </head>
   <body>
     <div>
-      <h1>Missile Command</h1>
+      <h1>Unicorn Command</h1>
       <div class="container">
         <div class="crosshair"></div>
       </div>
@@ -16,6 +16,6 @@
     </div>
 
     <script src="assets/js/jquery-2.1.0.min.js"></script>
-    <script src="assets/js/missile_command.js"></script>
+    <script src="assets/js/unicorn_command.js"></script>
   </body>
 </html>
